Search suggestion and searched data popuplated

--- a/src/components/list/list.html
+++ b/src/components/list/list.html
@@ -1,4 +1,4 @@
-<ion-list *ngFor="let list of data"> 
+<ion-list *ngFor="let list of listData"> 
   <ion-item>
     <ion-avatar item-start>
       <img src="{{list.snippet.thumbnails.default.url}}">
