Color scheme changed

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +12,23 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+ion-header {
+  ion-navbar {
+    .toolbar-background {
+      background: linear-gradient(45deg, color($colors, primary), color($colors, secondary));
+      border: none !important;
+    }
+    .toolbar-content {
+      ion-title {
+        .toolbar-title {
+          color: #fff;
+          font-weight: 300;
+        }
+      }
+    }
+    .back-button {
+      color: #fff;
+      font-weight: 300;
+    }
+  }
+}
