--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,7 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-$colors: ( primary: #00a3ff, secondary: #008cff, dark: #000, light: #fff );
+$colors: ( primary: #642B73, secondary: #c6426e, dark: #000, light: #fff );
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
