--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -14,8 +14,26 @@ page-home {
       }
     }
     .iT_body {
+      position: relative;
       display: flex;
+      flex-direction: column;
       flex: 0.95;
+      .iT_search_suggestions_container {
+        background: rgba(0, 0, 0, 0.75);
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 9;
+        .iT_search_suggestions_main {
+          overflow: scroll;
+          transition: max-height 0.5s ease-in-out;
+          height: auto;
+          max-height: 50vh;
+          background: #fff;
+        }
+      }
     }
   }
 }
