--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -42,3 +42,7 @@ ion-header {
   background: linear-gradient(45deg, color($colors, primary), color($colors, secondary));
   color: #fff;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+}
