--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,18 +6,69 @@ page-home {
     background-color: #fff;
     .iT_header {
       flex: 0.05;
-      background: linear-gradient(75deg, color($colors, primary), color($colors, secondary)); // padding-top: 35px;
+      box-shadow: 1px 1px 15px -3px black;
+      z-index: 9;
       .iT_header_txt {
         color: #fff;
         font-weight: 300;
-        font-size: 6vw;
         padding: 2vw;
         display: flex;
         justify-content: center;
         align-content: center;
+        height: 10vw;
+        background: linear-gradient(75deg, color($colors, primary), color($colors, secondary)); // padding-top: 35px;
       }
-      .iT_seachbar_bg {
-        background: transparent;
+      .iT_seachbar {
+        position: absolute;
+        width: 100%;
+        padding: 2vw;
+        visibility: visible;
+        z-index: -1;
+        background: linear-gradient(75deg, color($colors, primary), color($colors, secondary)); // padding-top: 35px;
+        transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
+        form {
+          input {
+            background: white;
+            border: transparent;
+            padding: 8px 36px 8px 36px;
+            font-size: 18px;
+            width: 100%;
+            border-radius: 5px;
+            &::placeholder {
+              color: #9e9e9e;
+            }
+          }
+          ion-icon {
+            position: absolute;
+            color: rgba(0, 0, 0, 0.5);
+            font-size: 24px;
+            top: 16px;
+            right: 20px;
+          }
+        }
+        &::before {
+          content: "\f4a5";
+          position: absolute;
+          color: #9e9e9e;
+          font-weight: bold;
+          font-size: 24px;
+          top: 16px;
+          left: 20px;
+          display: inline-block;
+          font-family: "Ionicons";
+          speak: none;
+          font-style: normal;
+          font-weight: normal;
+          font-variant: normal;
+          text-transform: none;
+          text-rendering: auto;
+          line-height: 1;
+          z-index: 1;
+          -webkit-font-smoothing: antialiased;
+        }
+      }
+      .iT_showSearch {
+        transform: translateY(-13vw);
       }
     }
     .iT_body {
@@ -43,4 +94,11 @@ page-home {
       }
     }
   }
+}
+
+@keyframes scroll-hide {
+  0% {
+    transform: translateY(0)
+  }
+  100% {}
 }
