--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,1 @@
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" swipeBackEnabled="true"></ion-nav>
+<ion-nav [root]="rootPage"></ion-nav>
